--- a/css/main.css
+++ b/css/main.css
@@ -79,4 +79,15 @@ body{
 
 .main{
     border: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.main > #camera{
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 65%;
+    transform: translateY(-50%) translateX(-50%);
+    width: 50%;
 }
