--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,23 @@
-html{
+html {
     height: 98%;
 }
 
-body{
+body {
     height: 98%;
     display: flex;
 }
 
-.left{
+.left {
     width: 30%;
     height: 100%;
 }
 
-.right{
+.right {
     width: 70%;
     height: 100%;
 }
 
-.input{
+.input {
     margin: 0px;
     margin-left: 30px;
     padding: 0px;
@@ -26,31 +26,37 @@ body{
     height: 20%;
 }
 
-.input > .status{
-    font-size: x-large;
+.input>.status {
     display: flex;
+    height: 50%;
 }
 
-.input > .status > #state{
+.input>.status>* {
+    font-size: x-large;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.input>.status>#state {
     width: 180px;
 }
 
-.input > .form{
-    margin-top: 10px;
-    margin-bottom: 10px;
+.input>.form {
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
-.input > .status > #time{
+.input>.status>#time {
     width: 50px;
     font-weight: bold;
 }
 
-.input > .form > #timeInput{
+.input>.form>#timeInput {
     width: 50px;
     text-align: right;
 }
 
-.log{
+.log {
     margin: 0px;
     padding: 0px;
     border: 0px;
@@ -59,31 +65,31 @@ body{
     height: 70%;
 }
 
-.log > .list{
+.log>.list {
     border: 2px black solid;
     width: 100%;
     height: 100%;
     overflow: auto;
 }
 
-.log > .list > p{
+.log>.list>p {
     margin-left: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
     display: flex;
 }
 
-.log > .list > p > div{
+.log>.list>p>div {
     margin-left: 5px;
 }
 
-.main{
+.main {
     border: 0px;
     width: 100%;
     height: 100%;
 }
 
-.main > #camera{
+.main>#camera {
     background-color: black;
     position: absolute;
     top: 50%;
